; ModuleID = '/home/carl/AnghaBench/Quake-III-Arena/code/win32/extr_win_qgl.c_BlendToName.c'
source_filename = "/home/carl/AnghaBench/Quake-III-Arena/code/win32/extr_win_qgl.c_BlendToName.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [7 x i8] c"GL_ONE\00", align 1
@.str.1 = private unnamed_addr constant [8 x i8] c"GL_ZERO\00", align 1
@.str.2 = private unnamed_addr constant [13 x i8] c"GL_SRC_ALPHA\00", align 1
@.str.3 = private unnamed_addr constant [23 x i8] c"GL_ONE_MINUS_SRC_ALPHA\00", align 1
@.str.4 = private unnamed_addr constant [13 x i8] c"GL_DST_COLOR\00", align 1
@.str.5 = private unnamed_addr constant [23 x i8] c"GL_ONE_MINUS_DST_COLOR\00", align 1
@.str.6 = private unnamed_addr constant [13 x i8] c"GL_DST_ALPHA\00", align 1
@.str.7 = private unnamed_addr constant [5 x i8] c"0x%x\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i8*, i32)* @BlendToName to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @BlendToName(i8* %0, i32 %1) #0 {
  %3 = alloca i8*, align 8
  %4 = alloca i32, align 4
  store i8* %0, i8** %3, align 8
  store i32 %1, i32* %4, align 4
  %5 = load i32, i32* %4, align 4
  switch i32 %5, label %27 [
    i32 132, label %6
    i32 128, label %9
    i32 129, label %12
    i32 130, label %15
    i32 133, label %18
    i32 131, label %21
    i32 134, label %24
  ]

6:                                                ; preds = %2
  %7 = load i8*, i8** %3, align 8
  %8 = call i32 @strcpy(i8* %7, i8* getelementptr inbounds ([7 x i8], [7 x i8]* @.str, i64 0, i64 0))
  br label %31

9:                                                ; preds = %2
  %10 = load i8*, i8** %3, align 8
  %11 = call i32 @strcpy(i8* %10, i8* getelementptr inbounds ([8 x i8], [8 x i8]* @.str.1, i64 0, i64 0))
  br label %31

12:                                               ; preds = %2
  %13 = load i8*, i8** %3, align 8
  %14 = call i32 @strcpy(i8* %13, i8* getelementptr inbounds ([13 x i8], [13 x i8]* @.str.2, i64 0, i64 0))
  br label %31

15:                                               ; preds = %2
  %16 = load i8*, i8** %3, align 8
  %17 = call i32 @strcpy(i8* %16, i8* getelementptr inbounds ([23 x i8], [23 x i8]* @.str.3, i64 0, i64 0))
  br label %31

18:                                               ; preds = %2
  %19 = load i8*, i8** %3, align 8
  %20 = call i32 @strcpy(i8* %19, i8* getelementptr inbounds ([13 x i8], [13 x i8]* @.str.4, i64 0, i64 0))
  br label %31

21:                                               ; preds = %2
  %22 = load i8*, i8** %3, align 8
  %23 = call i32 @strcpy(i8* %22, i8* getelementptr inbounds ([23 x i8], [23 x i8]* @.str.5, i64 0, i64 0))
  br label %31

24:                                               ; preds = %2
  %25 = load i8*, i8** %3, align 8
  %26 = call i32 @strcpy(i8* %25, i8* getelementptr inbounds ([13 x i8], [13 x i8]* @.str.6, i64 0, i64 0))
  br label %31

27:                                               ; preds = %2
  %28 = load i8*, i8** %3, align 8
  %29 = load i32, i32* %4, align 4
  %30 = call i32 @sprintf(i8* %28, i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str.7, i64 0, i64 0), i32 %29)
  br label %31

31:                                               ; preds = %27, %24, %21, %18, %15, %12, %9, %6
  ret void
}

declare dso_local i32 @strcpy(i8*, i8*) #1

declare dso_local i32 @sprintf(i8*, i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
